--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,35 @@ main p {
   height: calc(100vh - 100px);
   width: 100%;
   color: white;
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3)), url(/img/tokyo.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)), url(/img/tokyo.jpg);
   background-size: 100% auto; }
+
+.container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr); }
+  .container section {
+    display: inline-block; }
+  .container section:nth-child(1) {
+    grid-column: 5 / 6; }
+  .container section:nth-child(2) {
+    grid-column: 7 / 8; }
+  .container section:nth-child(3) {
+    grid-column: 9 / 13;
+    display: flex; }
+  .container button {
+    width: 150px;
+    height: 50px;
+    border: 2px solid white;
+    color: white;
+    background-color: transparent;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer; }
+
+.numbers {
+  font-family: "Heebo", sans-serif; }
+
+.label {
+  font-size: 1em;
+  font-family: "Roboto", sans-serif; }
 
 /*# sourceMappingURL=style.css.map */
