--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,7 +88,41 @@ main{
     color: white;
     background: linear-gradient(
         rgba(0, 0, 0, 0.6), 
-        rgba(0, 0, 0, 0.3)
+        rgba(0, 0, 0, 0.5)
     ),url(/img/tokyo.jpg);
     background-size: 100% auto;
+}
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    section{
+        display: inline-block;
+    }
+    section:nth-child(1){
+        grid-column: 5 / 6;
+    }
+    section:nth-child(2){
+        grid-column: 7 / 8;
+    }
+    section:nth-child(3){
+        grid-column: 9 / 13;
+        display: flex;
+    }
+    button{
+        width: 150px;
+        height: 50px;
+        border: 2px solid white;
+        color: white;
+        background-color: transparent;
+        font-family: $main-font;
+        cursor: pointer;
+    }
+}
+.numbers{
+    font-family: $head-font;
+}
+.label{
+    font-size: 1em;
+    font-family: $main-font;
 }
