--- a/scss/style.scss
+++ b/scss/style.scss
@@ -91,6 +91,20 @@ main{
         rgba(0, 0, 0, 0.5)
     ),url(/img/tokyo.jpg);
     background-size: 100% auto;
+    display: none;
+}
+
+#prague{
+    display: block;
+    height: calc(100vh - 100px);
+    width: 100%;
+    color: white;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.3), 
+        rgba(0, 0, 0, 0.1)
+    ),url(/img/jay-dantinne-499958-unsplash.jpg);
+    background-size: 100% auto;
+    background-position: center;
 }
 
 .container{
