--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,15 @@ main p {
   background-size: 100% auto;
   background-position: center; }
 
+#iceland {
+  display: block;
+  height: calc(100vh - 100px);
+  width: 100%;
+  color: white;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)), url(/img/emma-francis-135713-unsplash.jpg);
+  background-size: 100% auto;
+  background-position: center; }
+
 .container {
   display: grid;
   grid-template-columns: repeat(12, 1fr); }
