--- a/scss/style.scss
+++ b/scss/style.scss
@@ -107,6 +107,19 @@ main{
     background-position: center;
 }
 
+#iceland{
+    display: block;
+    height: calc(100vh - 100px);
+    width: 100%;
+    color: white;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.3), 
+        rgba(0, 0, 0, 0.1)
+    ),url(/img/emma-francis-135713-unsplash.jpg);
+    background-size: 100% auto;
+    background-position: center;
+}
+
 .container{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
